force-app/main/default/objects/cgcloud__Inventory_Transaction__c/cgcloud__Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <description>Captures Inventory Transaction records</description>
    <label>Inventory Transaction</label>
    <nameField>
        <displayFormat>INT-{0000000}</displayFormat>
        <label>Inventory Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>