force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Accounted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accounted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounted</label>
    <type>Checkbox</type>
</CustomField>