force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Allow_Manual_Creation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allow_Manual_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This technical field is created for identifying initial inventory &amp; Balance record creation.</description>
    <label>Allow Manual Creation</label>
    <type>Checkbox</type>
</CustomField>