force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>