force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This technical field is created for Total balance update in Inventory (Roll-up Summary field). Checkbox value is updating by workflow field update.</description>
    <label>Balance</label>
    <type>Checkbox</type>
</CustomField>