force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Charge_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Charge Date</label>
    <type>Date</type>
</CustomField>