force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the inventory is created.</description>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>