force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Inventory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory__c</fullName>
    <label>Inventory</label>
    <referenceTo>cgcloud__Inventory__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>