force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Order_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>cgcloud__Order_Item__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>