force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Order_Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Payment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to an order payment in case of a cash transaction.</description>
    <label>Order Payment</label>
    <referenceTo>cgcloud__Order_Payment__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>