force-app/main/default/objects/cgcloud__Inventory_Transaction__c/fields/cgcloud__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>MoneyOrder</fullName>
            </value>
            <value>
                <fullName>DebitCard</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>