force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Invalid_Inventory_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Invalid_Inventory_Check</fullName>
    <active>true</active>
    <description>Inventory Transaction can&apos;t be created for Invalid Inventory.</description>
    <errorConditionFormula>IF(NOT(cgcloud__Allow_Manual_Creation__c) &amp;&amp;  cgcloud__Inventory__r.cgcloud__Invalid__c, True, False)</errorConditionFormula>
    <errorMessage>Inventory Transaction can&apos;t be created for Invalid Inventory.</errorMessage>
</ValidationRule>