force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Inventory_Active_check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Inventory_Active_check</fullName>
    <active>true</active>
    <errorConditionFormula>Text(cgcloud__Inventory__r.cgcloud__Phase__c) &lt;&gt; &apos;Active&apos;</errorConditionFormula>
    <errorMessage>Inventory Phase must be Active.</errorMessage>
</ValidationRule>