force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Inventory_Transaction_Initial_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Inventory_Transaction_Initial_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(cgcloud__Allow_Manual_Creation__c) &amp;&amp;  cgcloud__Inventory_Transaction_Template__r.cgcloud__Initial__c, True, False)</errorConditionFormula>
    <errorMessage>Only inventory transaction templates with the Initial checked can be selected.</errorMessage>
</ValidationRule>