force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Payment_Method_Check_for_Cash_Float.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Method_Check_for_Cash_Float</fullName>
    <active>true</active>
    <description>Payment Method can&apos;t be empty if the Inventory is &apos;Cash Float&apos;.</description>
    <errorConditionFormula>AND
        (
        cgcloud__Inventory__r.RecordType.DeveloperName = &apos;Cash_Float&apos;,NOT(cgcloud__Allow_Manual_Creation__c),
        ISPICKVAL(cgcloud__Payment_Method__c, &apos;&apos;)
        )</errorConditionFormula>
    <errorMessage>Payment Method can&apos;t be empty if the Inventory is &apos;Cash Float&apos;.</errorMessage>
</ValidationRule>