force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Payment_Method_Check_for_Inventory_Quota.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Method_Check_for_Inventory_Quota</fullName>
    <active>true</active>
    <description>Payment Method must be empty if the Inventory is &apos;Inventory&apos; or &apos;Quota&apos;.</description>
    <errorConditionFormula>AND
        (
        (cgcloud__Inventory__r.RecordType.DeveloperName = &apos;Inventory&apos; || cgcloud__Inventory__r.RecordType.DeveloperName = &apos;Quota&apos;),NOT(cgcloud__Allow_Manual_Creation__c),
        NOT(ISPICKVAL(cgcloud__Payment_Method__c, &apos;&apos;))
        )</errorConditionFormula>
    <errorMessage>Payment Method must be empty if the Inventory is &apos;Inventory&apos; or &apos;Quota&apos;.</errorMessage>
</ValidationRule>