force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Sales_Org_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Check</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Inventory_Transaction_Template__r.cgcloud__Sales_Org__c)  &lt;&gt;  TEXT(cgcloud__Inventory__r.cgcloud__Sales_Org__c) &amp;&amp;
        ( NOT( ISBLANK(TEXT(cgcloud__Inventory_Transaction_Template__r.cgcloud__Sales_Org__c))) &amp;&amp; NOT( ISBLANK(TEXT(cgcloud__Inventory__r.cgcloud__Sales_Org__c) )))</errorConditionFormula>
    <errorMessage>The Inventory Transaction Template and the Inventory must have the same Sales Org.</errorMessage>
</ValidationRule>