force-app/main/default/objects/cgcloud__Inventory_Transaction__c/validationRules/cgcloud__Time_frame_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Time_frame_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOT(cgcloud__Allow_Manual_Creation__c ) &amp;&amp;  (cgcloud__Inventory__r.cgcloud__Valid_From__c &gt; TODAY() || cgcloud__Inventory__r.cgcloud__Valid_Thru__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Inventory Transaction must be in valid time frame.</errorMessage>
</ValidationRule>