force-app/main/default/objects/cgcloud__Inventory_Transaction__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Inventory_Transaction_Template__c</columns>
    <columns>cgcloud__Amount__c</columns>
    <columns>cgcloud__Accounted__c</columns>
    <columns>cgcloud__Inventory__c</columns>
    <columns>cgcloud__Currency__c</columns>
    <columns>cgcloud__Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>cgcloud__Charge_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>